fix(security): support wildcard CORS for vercel preview deployments